--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -135,6 +135,8 @@ main {
 }
 
 .second p {
+    max-width: 200px;
+    min-width: 200px;
     font-size: 1.1rem;
     font-weight: bolder;
     text-align: center;
